src/FinancialForce Accounting/objects/AllocationSchedule__c.object
<CustomObject>
    <customHelpPage>codahelpallocationscheduler</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After__c</fullName>
        <defaultValue>0</defaultValue>
        <label>After</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Allocation Schedules</relationshipLabel>
        <relationshipName>AllocationSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CronExpression__c</fullName>
        <label>Cron Expression</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateRangeType__c</fullName>
        <label>Date Range Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>StaticDate</fullName>
                </value>
                <value>
                    <fullName>DynamicDate</fullName>
                </value>
                <value>
                    <fullName>StaticPeriod</fullName>
                </value>
                <value>
                    <fullName>DynamicPeriod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaysBeforeOrAfterRunDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Before Or After Run Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysOffsetFromRunDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Offset From &apos;Run&apos; Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysOffsetFromToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Offset From &apos;To&apos; Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysPriorToToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Prior To To Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateGenerated__c</fullName>
        <label>End Date Generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FromDate__c</fullName>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FromDay__c</fullName>
        <label>From Day</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromInterval__c</fullName>
        <label>From Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FromOption__c</fullName>
        <label>From Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SpecificDate</fullName>
                </value>
                <value>
                    <fullName>ContinuousDate</fullName>
                </value>
                <value>
                    <fullName>OffsetDate</fullName>
                </value>
                <value>
                    <fullName>CalculatedDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FromTime__c</fullName>
        <label>From Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextContinuousDatetime__c</fullName>
        <label>Next Continuous Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PeriodOffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PeriodOption__c</fullName>
        <label>Period Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RunDate</fullName>
                </value>
                <value>
                    <fullName>TransactionDate</fullName>
                </value>
                <value>
                    <fullName>OffsetDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreviousFireTime__c</fullName>
        <label>Previous Fire Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PreviousToDate__c</fullName>
        <label>Previous To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RetrieveTransactionsByMonth__c</fullName>
        <label>Retrieve Transactions By Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
                <value>
                    <fullName>Last3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetrieveTransactionsByPeriod__c</fullName>
        <label>Retrieve Transactions By Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
                <value>
                    <fullName>Last3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetrieveTransactionsFromDate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RetrieveTransactionsOption__c</fullName>
        <label>Retrieve TransactionsOption Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RetrieveTransactionsSpecificDates</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsByPeriod</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsByMonth</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsFromFirstTransaction</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsFromDaysPriorToToDate</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsFromLastDates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetrieveTransactionsToDate__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduleExpiresOption__c</fullName>
        <label>Schedule Ends</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
                <value>
                    <fullName>EndBy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToDate__c</fullName>
        <label>To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToDay__c</fullName>
        <label>To Day</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToInterval__c</fullName>
        <label>To Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToOption__c</fullName>
        <label>To Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SpecificDate</fullName>
                </value>
                <value>
                    <fullName>ContinuousDate</fullName>
                </value>
                <value>
                    <fullName>OffsetDate</fullName>
                </value>
                <value>
                    <fullName>CalculatedDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToTime__c</fullName>
        <label>To Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionDateOption__c</fullName>
        <label>Transaction Date Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SpecificDate</fullName>
                </value>
                <value>
                    <fullName>OffsetDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TransactionDescription__c</fullName>
        <label>Transaction description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionOffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserDefinedName__c</fullName>
        <description>The name of the scheduled allocation</description>
        <label>User Defined Name</label>
        <length>243</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>zDeprecated:Allocation Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>